# SPECFEMPP

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
core/: CMakeLists.txt  specfem.cpp  specfem.hpp
core/specfem/: CMakeLists.txt  algorithms.hpp  assembly.hpp  boundary_conditions.hpp  boundary_conditions.tpp  chunk_edge.hpp  chunk_element.hpp  context.cpp  context.hpp  data_access.hpp  datatype.hpp  element.hpp  execute.cpp  execute.hpp  execution.hpp  jacobian.hpp  kokkos_kernels.hpp  logger.hpp  macros.hpp  mpi.hpp  parallel_configuration.hpp  periodic_tasks.hpp  point.hpp  program.hpp  quadrature.hpp  runtime_configuration.hpp  shape_function.hpp  shape_functions.hpp  simulation.cpp  simulation.hpp  solver.hpp  source_time_functions.hpp  timescheme.hpp  utilities.hpp
core/specfem/algorithms/: CMakeLists.txt  coupling_integral.hpp  divergence.hpp  gradient.hpp  interpolate.hpp  locate_point.hpp  transfer.hpp
core/specfem/algorithms/locate_point/: locate_point_impl.hpp  locate_point_impl.tpp
core/specfem/assembly/: CMakeLists.txt  assembly.hpp  boundaries.cpp  boundaries.hpp  compute_source_array.hpp  conforming_interfaces.hpp  coupled_interfaces.hpp  edge_types.hpp  element_types.hpp  fields.hpp  jacobian_matrix.hpp  kernels.hpp  mesh.hpp  nonconforming_interfaces.hpp  properties.hpp  receivers.hpp
core/specfem/assembly/boundary_values/: boundary_values.hpp
core/specfem/assembly/fields/: data_access.hpp  fields.hpp
core/specfem/assembly/jacobian_matrix/: load_on_device.hpp  load_on_host.hpp  store_on_device.hpp  store_on_host.hpp
core/specfem/assembly/mesh/: data_access.hpp
core/specfem/assembly/properties/: load_on_device.hpp  load_on_host.hpp  store_on_host.hpp
core/specfem/boundary_conditions/composite_stacey_dirichlet/: composite_stacey_dirichlet.tpp
core/specfem/boundary_conditions/none/: none.hpp
core/specfem/boundary_conditions/stacey/: stacey.hpp  stacey.tpp
core/specfem/chunk_edge/: index.hpp  nonconforming_coupled_interface.hpp  nonconforming_interface.hpp  nonconforming_intersection_factor.hpp  nonconforming_transfer_and_normal.hpp  nonconforming_transfer_function.hpp
core/specfem/chunk_edge/impl/: nonconforming_intersection_factor.hpp  (+2 more)
core/specfem/chunk_element/: index.hpp  mapped_index.hpp  stress_integrand.hpp
core/specfem/data_access/: accessor.hpp  check_compatibility.hpp  container.hpp  data_class.hpp
core/specfem/datatype/: chunk_edge_view.hpp  element_view.hpp
core/specfem/element/: lagrange_derivative.hpp  quadrature.hpp
core/specfem/execution/: mapped_chunked_domain_iterator.hpp
core/specfem/jacobian/: CMakeLists.txt
core/specfem/kokkos_kernels/: CMakeLists.txt  frechet_kernels.cpp  frechet_kernels.hpp
core/specfem/logger/: CMakeLists.txt  logger.cpp  logger.hpp  logger_options.cpp  logger_options.hpp
core/specfem/macros/: CMakeLists.txt  config_strings.hpp  data_container.hpp  enum_tags.hpp  interface_definitions.hpp  interface_iterators.hpp  kokkos_abort_with_location.hpp  material_definitions.hpp  material_iterators.hpp  point_container.hpp  suppress_warnings.hpp
core/specfem/mesh/: CMakeLists.txt
core/specfem/mpi/: CMakeLists.txt  mpi.cpp  mpi.hpp
core/specfem/parallel_configuration/: edge_config.hpp
core/specfem/periodic_tasks/: CMakeLists.txt  check_signal.cpp  check_signal.hpp  periodic_task.hpp  plot_wavefield.cpp  plot_wavefield.hpp  plotter.hpp  wavefield_reader.cpp  wavefield_reader.hpp  wavefield_writer.cpp  wavefield_writer.hpp
core/specfem/point/: CMakeLists.txt  acceleration.hpp  assembly_index.hpp  boundary.hpp  conforming_interface.hpp  coordinates.hpp  displacement.hpp  edge_index.hpp  field_derivatives.hpp  gll_index.hpp  global_coordinates.cpp  global_coordinates.hpp  global_coordinates.tpp  index.hpp  interface_index.hpp  jacobian_matrix.hpp  jacobian_matrix.tpp  kernels.hpp  local_coordinates.hpp  mapped_index.hpp  mass_inverse.hpp  nonconforming_interface.hpp  nonconforming_transfer_function.hpp  properties.hpp  stress.hpp  stress_integrand.hpp  velocity.hpp  weights.hpp
core/specfem/program/: CMakeLists.txt  abort.cpp  abort.hpp  context.cpp  context.hpp  program.cpp
core/specfem/quadrature/: CMakeLists.txt  gll.hpp  lagrange_derivative.hpp  quadrature.cpp  quadrature.hpp  quadratures.hpp
core/specfem/receivers/: CMakeLists.txt
core/specfem/runtime_configuration/: CMakeLists.txt  database_configuration.cpp  database_configuration.hpp  elastic_wave.cpp  electromagnetic_wave.cpp  header.cpp  header.hpp  quadrature.cpp  quadrature.hpp  receivers.cpp  receivers.hpp  run_setup.cpp  run_setup.hpp  setup.cpp  setup.hpp  solver.hpp  solver.tpp  time_scheme.cpp  time_scheme.hpp
core/specfem/shape_function/: CMakeLists.txt
core/specfem/shape_functions/: CMakeLists.txt
core/specfem/simulation/: CMakeLists.txt  context.cpp  context.hpp  simulation.cpp
core/specfem/solver/: CMakeLists.txt  time_marching.cpp  time_marching.hpp  time_marching.tpp
core/specfem/source/: CMakeLists.txt  source.hpp  source.tpp  tensor_source.hpp  vector_source.hpp
core/specfem/source_time_function/: dgaussian.cpp  dgaussian.hpp  dirac.cpp  external.cpp  external.hpp  gaussian.cpp  gaussianhdur.cpp  gaussianhdur.hpp  heaviside.cpp  heaviside.hpp  ricker.cpp  ricker.hpp
core/specfem/source_time_functions/: CMakeLists.txt  dgaussian.cpp  dgaussian.hpp  dirac.cpp  dirac.hpp  external.cpp  external.hpp  gaussian.cpp  gaussian.hpp  gaussianhdur.cpp  gaussianhdur.hpp  heaviside.cpp  heaviside.hpp  ricker.cpp  ricker.hpp  source_time_function.hpp
core/specfem/timescheme/: CMakeLists.txt  newmark.cpp  newmark.hpp  newmark.tpp  timescheme.cpp  timescheme.hpp
core/specfem/utilities/: CMakeLists.txt  strings.cpp  strings.hpp
nightly_benchmarks/: CMakeLists.txt
nightly_benchmarks/dim2/fluid-solid-interface/: CMakeLists.txt
nightly_benchmarks/dim2/homogeneous-medium-flat-topography/: CMakeLists.txt
nightly_benchmarks/dim2/homogeneous_medium_flat_topography/: CMakeLists.txt
nightly_benchmarks/nightly_benchmarks/: cli.py  io_utils.py
(+2398 files in other folders)
