cmake_minimum_required(VERSION 3.17.5)

# Add subdirectories for different dimensions and test cases
set(DIMS dim2 dim3)
foreach(DIM ${DIMS})
    set(DIM_DIR "${CMAKE_CURRENT_SOURCE_DIR}/serial/${DIM}")
    file(GLOB CHILDREN RELATIVE "${DIM_DIR}" "${DIM_DIR}/*")
    file(REMOVE_RECURSE "${CMAKE_CURRENT_BINARY_DIR}/serial/${DIM}")
    file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/serial/${DIM}")
    file(CREATE_LINK "${CMAKE_CURRENT_SOURCE_DIR}/${DIM}" "${CMAKE_CURRENT_BINARY_DIR}/${DIM}" SYMBOLIC)
    foreach(child ${CHILDREN})
        set(child_path "${DIM_DIR}/${child}")
        if(IS_DIRECTORY "${child_path}")
            if (EXISTS "${child_path}/CMakeLists.txt")
                # If the child directory contains a CMakeLists.txt file, add it as a subdirectory
                add_subdirectory("${child_path}" "${CMAKE_CURRENT_BINARY_DIR}/serial/${DIM}/${child}")
                file(GLOB CHILD_FILES RELATIVE "${child_path}" "${child_path}/*")
                foreach(cf ${CHILD_FILES})
                    get_filename_component(EXT ${cf} EXT)
                    if("${EXT}" STREQUAL ".bin" OR "${EXT}" STREQUAL ".yaml" OR ${cf} STREQUAL "STATIONS" OR ${cf} STREQUAL "traces")
                        file(CREATE_LINK "${child_path}/${cf}" "${CMAKE_CURRENT_BINARY_DIR}/serial/${DIM}/${child}/${cf}" SYMBOLIC)
                    endif()
                endforeach()
            else()
                # Otherwise, just create a symbolic link to the child directory
                file(CREATE_LINK "${child_path}" "${CMAKE_CURRENT_BINARY_DIR}/serial/${DIM}/${child}" SYMBOLIC)
            endif()
        endif()
    endforeach()
endforeach()
